change title and add citation for gas ration article

--- a/issues/transportation/document4.html
+++ b/issues/transportation/document4.html
@@ -48,11 +48,11 @@
 
     <div class="container main-container">
     	<a href="../transportation-documents.html" class="back-link">Documents</a>
-        <h3>New York Times Ration Article</h3>
+        <h3>Gas Ration Article</h3>
       <p>Senator Weicker Introduces Gas Ration Bill<br>
       February 23, 1974</p>
       <p> Senator Weicker introduced a bill on gas rations. He proposed cars be restricted to filling up one day a week and introduced a sticker system to regulate rationing. In addition, Senator Weicker introduced a bill that would require nationwide gas rationing 30 days after bill passage.</p>
-      <p>SOURCE: Osborn Box 23.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1543, Folder 4, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/transportation/4-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
