--- a/issues/transportation.html
+++ b/issues/transportation.html
@@ -78,7 +78,7 @@
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
             <div class="doc-img-container"><a href="transportation/document4.html"><img src="../images/issues/transportation/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
-            <p class="full-width-img"><a href="transportation/document4.html">New York Times Ration Article</a></p>
+            <p class="full-width-img"><a href="transportation/document4.html">Gas Ration Article</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
             <!-- <div class="doc-img-container"><a href="transportation/document5.html"><img src="../images/issues/transportation/5-1-thumb.jpg" class="full-width-img" alt=""></a></div>
