substitute aids document 9 for the unfindable aids document 2

--- a/issues/aids-documents.html
+++ b/issues/aids-documents.html
@@ -55,8 +55,8 @@
             <p class="full-width-img"><a href="aids/document1.html">AIDS Action Council Speech</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="aids/document2.html"><img src="../images/issues/aids/2-1-thumb.jpg" class="full-width-img" alt="The transcript of a statement released by Senator Lowell P. Weicker Jr."></a></div>
-            <p class="full-width-img"><a href="aids/document2.html">S. 1220 Speech</a></p>
+            <div class="doc-img-container"><a href="aids/document9.html"><img src="../images/issues/aids/9-1-thumb.jpg" class="full-width-img" alt="Newspaper article on negotiations between Weicker, Kennedy, and Helms"></a></div>
+            <p class="full-width-img"><a href="aids/document9.html">'Horse-Trading' effort by Helms and Kennedy</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="aids/document3.html"><img src="../images/issues/aids/3-1-thumb.jpg" class="full-width-img" alt="A newspaper article by Marlene Cimons featuring a photo of Adm. James D. Watkins"></a></div>
