remove references to boxes that no longer exist in the present arrangement of the collection

--- a/issues/aids.html
+++ b/issues/aids.html
@@ -117,7 +117,6 @@
           <h4>Sources:</h4>
           <ul>
             <li>Maureen Byrnes interview with Phyllis Leffler, 13 April 2010. </li>
-            <li>Snider Box 1. </li>
             <li><span class="work-title">Congressional Record</span>, 5/03/1983.</li>
           </ul>
         </div> 
@@ -138,9 +137,7 @@
           <p class="sources">Sources: <a href="http://supreme.justia.com/us/480/273/case.html" class="court-case">School Board of Nassau County v. Arline</a>. [accessed 10 March 2011] </p>
           <h5>S. 1220 Comprehensive AIDS Legislation</h5>
           <p>In 1988, Sen. Edward Kennedy (D-MA) introduced S. 1220 in the Senate and with the help of several Congressmen, Sen. Lowell Weicker (as a cosponsor) among them, S. 1220 became the first and most comprehensive piece of AIDS legislation. The bill amended the Public Health Service Act to provide a comprehensive program of education, information, risk reduction, training, prevention, treatment, care, and research concerning AIDS. Sen. Lowell Weicker's potential amendment aimed to add in-school “AIDS education for school-age children to the list of activities for which states [could] use their AIDS prevention funds” (Congressional Record). S. 1220 came on the heels of the Watkins Commission report, and it sought to address the concerns and implement the suggestions of the report. The bill also established an AIDS Coordinator, who became responsible for a National Program on AIDS. Sen. Jesse Helms, a regular opponent to AIDS legislation and funding, opposed the bill and attempted to add his own amendments into S. 1220. Helms' amendments failed to pass while Sen. Lowell Weicker's amendments became a vital part of this piece of legislation. S. 1220 allocated $600 million for the Fiscal Year 1988 for AIDS funding and research.</p>
-          <p class="sources">Sources: Congressional Record, 07/29/1987 ; 
-            Hank Price/Steve Snider Box 1 ; 
-          General Staff Box 7</p>
+          <p class="sources">Sources: Congressional Record, 07/29/1987</p>
           <h5>S. 1374 AIDS Act</h5>
           <p>This senate bill declared AIDS as a national public health emergency and called for an increase in training, services, and public information. The bill was primarily sponsored by Sen. Kennedy, but Sen. Weicker’s aide Kim Elliott contributed her thoughts to the bill before it came to the floor of the Senate.</p>
           <h5>S. 1352 AIDS Control Act</h5>
@@ -153,10 +150,9 @@
           <p class="sources">Sources: CR 3.3.87</p>
           <h5>S. 79 High Risk Occupational Disease Notification Bill</h5>
           <p>This bill designated workers at risk of occupational exposure to AIDS as a “risk population.” In order to reduce the risk of infection in the workplace, Senator Edward Kennedy proposed a substitute to disseminate information to all health workers. Senator Weicker supported the Kennedy proposal, but Senator Helms sought to add an amendment to &quot;undermine the scientific principles&quot; of the bill by creating a Risk Assessment Board (Snider). Because the amendment was opposed by the American Medical Association, Senators Weicker and Kennedy wrote their colleagues to urge them to oppose the Helms Amendment to S. 79. This bill would also bring back debate over transmission of AIDS through casual contact (handshakes, coughing, etc).</p>
-          <p class="sources">Sources: Snider Box 1</p>
           <h5>The Watkins Commission</h5>
           <p>The Presidential AIDS Commission, known as the Watkins' Commission, formed in September of 1987 as a part of the federal government's response to the AIDS epidemic. While Sen. Weicker's staff was skeptical the commission was an attempt to derail biomedical research on the AIDS epidemic, Senator Weicker and the NIH worked together with the Watkins Commission. Admiral Watkins actually took to Weicker's opinion on the AIDS epidemic and recommended for more biomedical research. In addition, Admiral Watkins urged the federal government to take a stance on discrimination against those with AIDS. While Weicker and his staffers had doubts about the results of this commission, the commission supported the same initiatives that Weicker and his colleagues fought to achieve (Weicker).</p>
-          <p class="sources">Sources: Weicker, Lowell P. &quot;<a href="../interviews/weicker4.html">Interview 4</a>.&quot; Personal Interview by Phyllis Leffler. 14 May 2010 ; Swift Box 1</p>
+          <p class="sources">Sources: Weicker, Lowell P. &quot;<a href="../interviews/weicker4.html">Interview 4</a>.&quot; Personal Interview by Phyllis Leffler. 14 May 2010</p>
           </div>
 
             </div>
