update editorial language referring to people with disabilities

--- a/issues.html
+++ b/issues.html
@@ -69,7 +69,7 @@
         	<img src="images/issues-disabilities.jpg" class="full-width-img" alt="a wheelchair user confronting stairs">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
-		<p class="issues-subhead">During the 1980s, Lowell P. Weicker, Jr., and his staff evaluated, updated, and created health policies in the field of mental retardation and civil rights for the handicapped. Senator Weicker is a long-standing and very vocal advocate of affordable public programs for the handicapped and disabled, a commitment fostered by his son, Sonny, who has Down’s syndrome. As President Reagan sought to scale back federal aid for health care, welfare, and education, Senator Weicker and his staff fought back against deep budget cuts, ensuring that handicapped legislation continued to serve the needs of disabled individuals.</p>
+		<p class="issues-subhead">During the 1980s, Lowell P. Weicker, Jr., and his staff evaluated, updated, and created health policies in the field of mental disabilities and civil rights for people with disabilities. Senator Weicker is a long-standing and very vocal advocate of affordable public programs for people with disabilities, a commitment fostered by his son, Sonny, who has Down’s syndrome. As President Reagan sought to scale back federal aid for health care, welfare, and education, Senator Weicker and his staff fought back against deep budget cuts, ensuring that legislation would continue to serve the needs of individuals with disabilities.</p>
            	  </div><!-- /.col-sm-9 -->
     </div><!-- /.row --> 
 
