--- a/issues/disabilities.html
+++ b/issues/disabilities.html
@@ -58,7 +58,7 @@
         <div class="col-md-9">
           <img src="../images/issues-disabilities.jpg" class="issues-illo" alt="A person in a wheelchair faces a set of stairs" />
           <h4>Overview</h4>
-          <p>During the 1980s, Lowell P. Weicker, Jr., and his staff evaluated, updated, and created health policies in the field of mental disabilities and civil rights for people with disabilities. Senator Weicker is a long-standing and very vocal advocate of affordable public programs for people with disabilities, a commitment fostered by his son, Sonny, who has Down’s syndrome. As President Reagan sought to scale back federal aid for health care, welfare, and education, Senator Weicker and his staff fought back against deep budget cuts, ensuring that legislation would continue to serve the needs of disabled individuals.</p>
+          <p>During the 1980s, Lowell P. Weicker, Jr., and his staff evaluated, updated, and created health policies in the field of mental disabilities and civil rights for people with disabilities. Senator Weicker is a long-standing and very vocal advocate of affordable public programs for people with disabilities, a commitment fostered by his son, Sonny, who has Down’s syndrome. As President Reagan sought to scale back federal aid for health care, welfare, and education, Senator Weicker and his staff fought back against deep budget cuts, ensuring that legislation would continue to serve the needs of individuals with disabilities.</p>
           <div class="related-docs-top-border">
           <div class="related-docs-container">
           	<a href="disabilities-documents.html" class="related-docs-all-link">See all documents</a>
