--- a/issues/conservation-documents.html
+++ b/issues/conservation-documents.html
@@ -51,8 +51,8 @@
         <h3>Documents Related to Environmental Conservation and Oceanic Preservation</h3>
       <div class="row doc-directory-container">
       <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
-            <p class="full-width-img"><a href="conservation/document1.html">Overview of Environmental Involvement</a></p>
+            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/7-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
+            <p class="full-width-img"><a href="conservation/document7.html">Weicker Receives Environmental Achievement Award</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
