--- a/issues/conservation.html
+++ b/issues/conservation.html
@@ -65,8 +65,8 @@
             <div class="related-docs-header">Related Documents</div>
             <div class="clearfix"></div>
           	<div class="related-docs">
-            <div class="doc-img-container"><a href="conservation/document1.html"><img src="../images/issues/conservation/1-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
-            <p class="full-width-img"><a href="conservation/document1.html">Overview of Environmental Involvement</a></p>
+            <div class="doc-img-container"><a href="conservation/document7.html"><img src="../images/issues/conservation/7-1-thumb.jpg" class="full-width-img" alt="typed statement"></a></div>
+            <p class="full-width-img"><a href="conservation/document7.html">Weicker Receives Environmental Achievement Award</a></p>
             </div>
           	<div class="related-docs hidden-xs">
             <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
