--- a/issues/conservation-documents.html
+++ b/issues/conservation-documents.html
@@ -55,8 +55,8 @@
             <p class="full-width-img"><a href="conservation/document7.html">Weicker Receives Environmental Achievement Award</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document2.html"><img src="../images/issues/conservation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
-            <p class="full-width-img"><a href="conservation/document2.html">Weicker Bets on the Oceans</a></p>
+            <div class="doc-img-container"><a href="conservation/document8.html"><img src="../images/issues/conservation/8-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
+            <p class="full-width-img"><a href="conservation/document8.html">Goals of a National Oceans Program</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="conservation/document3.html"><img src="../images/issues/conservation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
