replace unfindable conservation document 5 with conservation document 9; add citations to conservation documents 7 and 8

--- a/issues/conservation/document8.html
+++ b/issues/conservation/document8.html
@@ -52,6 +52,7 @@
       <p>Press Release<br>
 	  January 10, 1977</p>
       <p> A press release from Senator Lowell Weicker's office describes how he will join other leaders of government and academia in a four-day seminar on "Goals of a National Oceans Program" sponsored by the University of Virginia Center for Oceans Law and Policy.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 331, Folder 2, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/conservation/8-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
