--- a/issues/conservation/document9.html
+++ b/issues/conservation/document9.html
@@ -48,12 +48,11 @@
 
     <div class="container main-container">
     	<a href="../conservation-documents.html" class="back-link">Documents</a>
-        <h3>Weicker Receives Environmental Achievement Award</h3>
-      <p>Press Release<br>
-      June 7, 1988</p>
-      <p>This press release from Senator Lowell Weicker's office notes his selection as one of "America's 500 outstanding environmental achievers" by the United States Friends of United Nations Environment Program.</p>
-      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 861, Folder 93, Small Special Collections Library, University of Virginia</p>
-      		<img src="../../images/issues/conservation/7-1-full.jpg" class="full-width-img" alt="press release"></a>
+        <h3>Sen. Weicker visits the Hydrolab</h3>
+      <p>LPW Underwater</p>
+      <p>Schedule for Senator Lowell Weicker's 1975 dive to NOAA's Hydrolab underwater research facility in the Bahamas.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 328, Folder 8, Small Special Collections Library, University of Virginia</p>
+      		<img src="../../images/issues/conservation/9-1-full.jpg" class="full-width-img" alt="news article">
 
   </div><!-- /.container -->
 <footer>
