--- a/issues/conservation-documents.html
+++ b/issues/conservation-documents.html
@@ -69,8 +69,8 @@
           <!-- Add the extra clearfix for only the required viewport -->
 		  <div class="clearfix visible-lg-block"></div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="conservation/document5.html"><img src="../images/issues/conservation/5-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
-            <p class="full-width-img"><a href="conservation/document5.html">Sen. Weicker visits the Hydro-lab</a></p>
+            <div class="doc-img-container"><a href="conservation/document9.html"><img src="../images/issues/conservation/9-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
+            <p class="full-width-img"><a href="conservation/document9.html">Sen. Weicker visits the Hydrolab</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="conservation/document6.html"><img src="../images/issues/conservation/6-1-thumb.jpg" class="full-width-img" alt="newsletter page"></a></div>
