--- a/issues/politics-documents.html
+++ b/issues/politics-documents.html
@@ -59,8 +59,8 @@
             <p class="full-width-img"><a href="politics/document2.html">Republican Platform Hearing</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="politics/document3.html"><img src="../images/issues/politics/3-1-thumb.jpg" class="full-width-img" alt=""></a></div>
-            <p class="full-width-img"><a href="politics/document3.html">Lowell Weicker – Third Party of One</a></p>
+            <div class="doc-img-container"><a href="politics/document5.html"><img src="../images/issues/politics/5-1-thumb.jpg" class="full-width-img" alt="document"></a></div>
+            <p class="full-width-img"><a href="politics/document5.html">Comment on Third Parties</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="politics/document4.html"><img src="../images/issues/politics/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
