--- a/issues/transportation-documents.html
+++ b/issues/transportation-documents.html
@@ -51,8 +51,8 @@
         <h3>Documents Related to Transportation</h3>
       <div class="row doc-directory-container">
   <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="doc-img-container"><a href="transportation/document1.html"><img src="../images/issues/transportation/1-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
-            <p class="full-width-img"><a href="transportation/document1.html">New York Times Transit Fund Article</a></p>
+            <div class="doc-img-container"><a href="transportation/document5.html"><img src="../images/issues/transportation/5-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
+            <p class="full-width-img"><a href="transportation/document5.html">Statement on Transportation Amendment</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
