--- a/issues/transportation.html
+++ b/issues/transportation.html
@@ -69,15 +69,15 @@
             <p class="full-width-img"><a href="transportation/document5.html">Statement on Transportation Amendment</a></p>
             </div>
           	<div class="related-docs hidden-xs">
-            <div class="doc-img-container"><a href="transportation/document2.html"><img src="../images/issues/transportation/2-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
-            <p class="full-width-img"><a href="transportation/document2.html">Bill to Aid Transit</a></p>
+            <div class="doc-img-container"><a href="transportation/document6.html"><img src="../images/issues/transportation/6-1-thumb.jpg" class="full-width-img" alt="press release"></a></div>
+            <p class="full-width-img"><a href="transportation/document6.html">Bill to Aid Transit</a></p>
             </div>
           	<div class="related-docs hidden-xs">
             <div class="doc-img-container"><a href="transportation/document3.html"><img src="../images/issues/transportation/3-1-thumb.jpg" class="full-width-img" alt="Congressional bill"></a></div>
             <p class="full-width-img"><a href="transportation/document3.html">S. 771 Bill</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
-            <div class="doc-img-container"><a href="transportation/document4.html"><img src="../images/issues/transportation/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
+            <div class="doc-img-container"><a href="transportation/document4.html"><img src="../images/issues/transportation/4-1-thumb.jpg" class="full-width-img" alt="news article"></a></div>
             <p class="full-width-img"><a href="transportation/document4.html">Gas Ration Article</a></p>
             </div>
           	<div class="related-docs hidden-md hidden-sm hidden-xs">
