add a couple lines to the credits

--- a/credits.html
+++ b/credits.html
@@ -58,6 +58,8 @@
 <li>Hoke Perkins</li>
 <li>Rachel Pierce</li>
 <li>Emma Potter</li>
+<li>The University of Virginia Digital Production Group</li>
+<li>The Albert and Shirley Small Special Collections at the University of Virginia</li>
 </ul>
 		
     </div><!-- /.container -->
